--- a/src/pages/material-ply-wood-multiplex.astro
+++ b/src/pages/material-ply-wood-multiplex.astro
@@ -4,7 +4,7 @@ import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import { MATERIALS, SERVICES } from '../utils/constants.js';
 
-const material = MATERIALS.find(m => m.id === 'ply-wood-multiplex');
+const material = MATERIALS.find(m => m.id === 'plywood');
 const recommendedService = SERVICES.find(s => s.id === 'cnc-router');
 
 const jsonLd = {
